airflow/logs/dag_id=dynamic_metadata_pipeline/run_id=manual__2026-06-03T125711.809031+0000/task_id=run_pipeline_5/attempt=1.log
[2026-06-03T12:57:15.730+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2026-06-03T12:57:15.818+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_5 manual__2026-06-03T12:57:11.809031+00:00 [queued]>
[2026-06-03T12:57:15.834+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_5 manual__2026-06-03T12:57:11.809031+00:00 [queued]>
[2026-06-03T12:57:15.835+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2026-06-03T12:57:15.860+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): run_pipeline_5> on 2026-06-03 12:57:11.809031+00:00
[2026-06-03T12:57:15.885+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'dynamic_metadata_pipeline', 'run_pipeline_5', 'manual__2026-06-03T12:57:11.809031+00:00', '--job-id', '140', '--raw', '--subdir', 'DAGS_FOLDER/dynamic_pipeline_dag.py', '--cfg-path', '/tmp/tmpecp8q81q']
[2026-06-03T12:57:15.889+0000] {standard_task_runner.py:91} INFO - Job 140: Subtask run_pipeline_5
[2026-06-03T12:57:15.890+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=2127) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2026-06-03T12:57:15.892+0000] {standard_task_runner.py:63} INFO - Started process 2134 to run task
[2026-06-03T12:57:15.972+0000] {task_command.py:426} INFO - Running <TaskInstance: dynamic_metadata_pipeline.run_pipeline_5 manual__2026-06-03T12:57:11.809031+00:00 [running]> on host c3bf940c8326
[2026-06-03T12:57:16.112+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='subashri' AIRFLOW_CTX_DAG_ID='dynamic_metadata_pipeline' AIRFLOW_CTX_TASK_ID='run_pipeline_5' AIRFLOW_CTX_EXECUTION_DATE='2026-06-03T12:57:11.809031+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-06-03T12:57:11.809031+00:00'
[2026-06-03T12:57:16.114+0000] {taskinstance.py:430} INFO - ::endgroup::
[2026-06-03T12:57:16.144+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2026-06-03T12:57:16.154+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', 'cd /opt/***/src && python main.py 5']
[2026-06-03T12:57:16.174+0000] {subprocess.py:86} INFO - Output:
[2026-06-03T12:57:45.208+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:57:45.210+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T12:57:45.210+0000] {subprocess.py:93} INFO - DATABASE CONNECTION CONFIG
[2026-06-03T12:57:45.211+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T12:57:45.212+0000] {subprocess.py:93} INFO - DB TYPE   : postgres
[2026-06-03T12:57:45.213+0000] {subprocess.py:93} INFO - HOST      : 3.107.8.33
[2026-06-03T12:57:45.213+0000] {subprocess.py:93} INFO - PORT      : 5432
[2026-06-03T12:57:45.214+0000] {subprocess.py:93} INFO - DATABASE  : metadata_db
[2026-06-03T12:57:45.215+0000] {subprocess.py:93} INFO - USERNAME  : teamuser
[2026-06-03T12:57:45.215+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T12:57:45.216+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:57:45.217+0000] {subprocess.py:93} INFO - Connected to POSTGRES successfully.
[2026-06-03T12:57:45.218+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:57:45.218+0000] {subprocess.py:93} INFO - Running pipeline: s3_to_postgres_pipeline (storage_to_db)
[2026-06-03T12:57:45.219+0000] {subprocess.py:93} INFO - Loading table: customer_feb (120 rows)
[2026-06-03T12:57:45.220+0000] {subprocess.py:93} INFO - Loading table: customer_jan (100 rows)
[2026-06-03T12:57:45.221+0000] {subprocess.py:93} INFO - Loading table: customer_march (150 rows)
[2026-06-03T12:57:45.222+0000] {subprocess.py:93} INFO - Processed total rows: 370
[2026-06-03T12:57:45.223+0000] {subprocess.py:93} INFO - Completed: 370 rows processed
[2026-06-03T12:57:45.225+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T12:57:45.226+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 72, in main
[2026-06-03T12:57:45.227+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T12:57:45.228+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T12:57:45.228+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T12:57:45.229+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T12:57:45.230+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T12:57:45.231+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T12:57:45.231+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:57:45.233+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:57:45.233+0000] {subprocess.py:93} INFO - During handling of the above exception, another exception occurred:
[2026-06-03T12:57:45.234+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:57:45.235+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T12:57:45.236+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 111, in <module>
[2026-06-03T12:57:45.237+0000] {subprocess.py:93} INFO -     main()
[2026-06-03T12:57:45.238+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 95, in main
[2026-06-03T12:57:45.239+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T12:57:45.240+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T12:57:45.241+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T12:57:45.242+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T12:57:45.243+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T12:57:45.243+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T12:57:45.244+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:57:45.567+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2026-06-03T12:57:45.569+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2026-06-03T12:57:45.584+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2026-06-03T12:57:45.590+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=dynamic_metadata_pipeline, task_id=run_pipeline_5, run_id=manual__2026-06-03T12:57:11.809031+00:00, execution_date=20260603T125711, start_date=20260603T125715, end_date=20260603T125745
[2026-06-03T12:57:45.609+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 140 for task run_pipeline_5 (Bash command failed. The command returned a non-zero exit code 1.; 2134)
[2026-06-03T12:57:45.619+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2026-06-03T12:57:45.642+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2026-06-03T12:57:45.645+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
